@@ -1,27 +1,25 @@
 package com.clinica.sistema.Controlador;
 
 import com.clinica.sistema.Modelo.Paciente;
+import com.clinica.sistema.Modelo.Direccion; // Importar la nueva entidad Direccion
 import com.clinica.sistema.Servicio.AuthServicio;
 
-import jakarta.servlet.http.HttpSession;
-
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import org.apache.commons.lang3.StringUtils; 
-import com.google.common.base.Preconditions; 
-
 @Controller
 public class AuthControlador {
 
-    @Autowired
-    private AuthServicio authServicio;
+    private final AuthServicio authServicio;
 
-    private Logger logger = LoggerFactory.getLogger(AuthControlador.class);
+    private final Logger logger = LoggerFactory.getLogger(AuthControlador.class);
+
+    public AuthControlador(AuthServicio authServicio) {
+        this.authServicio = authServicio;
+    }
 
     @GetMapping("/login")
     public String mostrarFormularioLogin() {
@@ -29,31 +27,9 @@ public class AuthControlador {
         return "login";
     }
 
-    @PostMapping("/login")
-    public String procesarLogin(@RequestParam("correo") String correo,
-                                @RequestParam("contraseña") String contraseña,
-                                HttpSession session) {
-
-        if (StringUtils.isBlank(correo) || StringUtils.isBlank(contraseña)) {
-            logger.warn("Intento de login con correo o contraseña vacíos.");
-            return "redirect:/login?error=camposvacios";
-        }
-
-        Paciente paciente = authServicio.buscarPorCorreoYPassword(correo, contraseña);
-        if (paciente != null) {
-            session.setAttribute("usuario", paciente);
-            logger.info("Login exitoso para el correo: {}", correo);
-            return "redirect:/";
-        }
-        logger.warn("Login fallido para el correo: {}", correo);
-        return "redirect:/login?error=credenciales";
-
-    }
-
     @PostMapping("/logout")
-    public String cerrarSesion(HttpSession session) {
-        session.invalidate();
-        logger.info("Sesión cerrada.");
+    public String cerrarSesion() {
+        logger.info("Sesión cerrada (manejado por Spring Security).");
         return "redirect:/login?logout";
     }
 
@@ -64,28 +40,58 @@ public class AuthControlador {
     }
 
     @PostMapping("/registro")
-    public String procesarRegistro(@ModelAttribute Paciente paciente) {
+    public String procesarRegistro(
+            @ModelAttribute Paciente paciente,
+            @RequestParam("direccion") String direccionCompleta // Captura el campo 'direccion' del formulario
+    ) {
         logger.info("Intentando registrar paciente con correo: {} y DNI: {}", paciente.getCorreo(), paciente.getDni());
+        logger.info("Dirección proporcionada: {}", direccionCompleta);
 
-        Preconditions.checkNotNull(paciente, "El objeto Paciente no puede ser nulo.");
+        try {
+            // Validaciones básicas de campos del paciente
+            if (paciente.getCorreo() == null || paciente.getCorreo().isBlank() ||
+                paciente.getDni() == null || paciente.getDni().isBlank() ||
+                paciente.getContraseña() == null || paciente.getContraseña().isBlank() ||
+                paciente.getNombre() == null || paciente.getNombre().isBlank() || // Aseguramos que nombre y apellido no estén vacíos
+                paciente.getApellido() == null || paciente.getApellido().isBlank()) {
+                logger.warn("Registro fallido: campos obligatorios de paciente vacíos.");
+                return "redirect:/registro?error=camposvacios";
+            }
 
-        if (StringUtils.isBlank(paciente.getNombre()) ||
-            StringUtils.isBlank(paciente.getApellido()) ||
-            StringUtils.isBlank(paciente.getCorreo()) ||
-            StringUtils.isBlank(paciente.getContraseña()) ||
-            StringUtils.isBlank(paciente.getDni())) {
-            logger.warn("Registro fallido: campos obligatorios vacíos para el paciente.");
-            return "redirect:/registro?error=camposvacios";
+            // Validación de la dirección
+            if (direccionCompleta == null || direccionCompleta.isBlank()) {
+                logger.warn("Registro fallido: el campo de dirección está vacío.");
+                return "redirect:/registro?error=direccionvacia"; // Nuevo error para dirección vacía
+            }
+
+            if (authServicio.existePacientePorEmailODni(paciente.getCorreo(), paciente.getDni())) {
+                logger.warn("Registro fallido: paciente con correo {} o DNI {} ya existe.", paciente.getCorreo(), paciente.getDni());
+                return "redirect:/registro?error=duplicado";
+            }
+
+            // Crear la entidad Direccion
+            Direccion direccion = new Direccion();
+            direccion.setDireccionCompleta(direccionCompleta);
+            // La relación con paciente se establecerá en el servicio o se asume que se propaga vía CascadeType.ALL
+
+            // Llamar al servicio para guardar el paciente y la dirección
+            authServicio.guardarPaciente(paciente, direccion); // Nuevo método en el servicio
+
+            logger.info("Paciente y dirección registrados exitosamente para el correo: {}", paciente.getCorreo());
+            return "redirect:/login?registroExitoso";
+
+        } catch (IllegalArgumentException e) {
+            logger.error("Error de validación durante el registro: {}", e.getMessage());
+            String errorMessage = "errorinesperado"; // Default error message
+            if (e.getMessage().contains("vacío") || e.getMessage().contains("nulo")) {
+                errorMessage = "camposvacios";
+            } else if (e.getMessage().contains("existe")) {
+                errorMessage = "duplicado";
+            }
+            return "redirect:/registro?error=" + errorMessage;
+        } catch (Exception e) {
+            logger.error("Error inesperado durante el registro para el correo {}: {}", paciente.getCorreo(), e.getMessage(), e);
+            return "redirect:/registro?error=errorinesperado";
         }
-
-        if (authServicio.existePacientePorEmailODni(paciente.getCorreo(), paciente.getDni())) {
-            logger.warn("Registro fallido: paciente con correo {} o DNI {} ya existe.", paciente.getCorreo(),
-                    paciente.getDni());
-            return "redirect:/registro?error=duplicado";
-        }
-
-        authServicio.guardarPaciente(paciente);
-        logger.info("Paciente registrado exitosamente: {}", paciente.getCorreo());
-        return "redirect:/login";
     }
 }
